kubernetes/overlays/devel/patches/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spanamo-admin-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: spanamo-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  tls:
    - hosts:
        - admin.spanamo.online
      secretName: spanamo-admin-online-tls
  rules:
    - host: admin.spanamo.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spanamo-admin-webserver-php-fpm
                port:
                  number: 80
